--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@jsonforms/core": "^2.5.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
