--- a/.helm/templates/ingress.yaml
+++ b/.helm/templates/ingress.yaml
@@ -3,19 +3,12 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt-prod
   name: app
 spec:
-  tls:
-    - hosts:
-        - ekp-farms.k.earnkeeper.io
-        - db-farms.k.earnkeeper.io
-      secretName: ekp-farms-tls
   rules:
-    - host: ekp-farms.k.earnkeeper.io
-      http:
+    - http:
         paths:
-          - path: /
+          - path: /farms
             pathType: Prefix
             backend:
               service:
