--- a/.helm/templates/service.yaml
+++ b/.helm/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app
+  name: farms
 spec:
   selector:
-    app: app
+    app: farms
   ports:
   - name: http
     port: 3001
