--- a/.helm/templates/ingress.yaml
+++ b/.helm/templates/ingress.yaml
@@ -2,11 +2,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    kubernetes.io/ingress.class: nginx
-  name: app
+    kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/issuer: "letsencrypt-staging"
+  name: ekp-public
 spec:
+  tls:
+    - hosts:
+        - "{{ .Values.ingress.hostname }}"
+      secretName: ekp-public-tls
   rules:
-    - http:
+    - host: "{{ .Values.ingress.hostname }}"
+      http:
         paths:
           - path: /farms
             pathType: Prefix
