fix: no matches for kind "Issuer" in version "cert-manager.io/v1"

--- a/.helm/Chart.yaml
+++ b/.helm/Chart.yaml
@@ -9,6 +9,6 @@ dependencies:
     repository: "https://charts.bitnami.com/bitnami"
 
   - name: cert-manager
-    version: "0.1.25"
-    repository: "https://charts.bitnami.com/bitnami"
+    version: "v1.3.1"
+    repository: "https://charts.jetstack.io"
     
