--- a/.helm/templates/ingress.yaml
+++ b/.helm/templates/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/issuer: "letsencrypt-prod"
+    cert-manager.io/issuer: "letsencrypt-staging"
   name: ekp-public
 spec:
   tls:
