--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "description": "Templates, examples and tools to develop plugins for earnkeeper.io",
   "private": true,
+  "config": {
+    "namespace": "ekp"
+  },
   "scripts": {
+    "k:check-cert": "kubectl describe certificate ${npm_package_config_namespace}-public-tls -n $npm_package_config_namespace",
+    "k:gen-secret-key": "werf helm secret generate-secret-key > .werf_secret_key",
     "k:encrypt-secrets": "werf helm secret values encrypt clear-values.yaml -o .helm/secret-values.yaml"
   },
   "repository": {
