--- a/farms/package.json
+++ b/farms/package.json
@@ -8,6 +8,10 @@
   },
   "author": "Gavin Shaw",
   "license": "GPL-3.0-or-later",
+  "engines": {
+    "node": ">= 14.17.0",
+    "npm": ">= 7.19.0"
+  },
   "bugs": {
     "url": "https://github.com/earnkeeper/ekp/issues"
   },
