--- a/farms/package.json
+++ b/farms/package.json
@@ -10,7 +10,8 @@
   "license": "GPL-3.0-or-later",
   "engines": {
     "node": ">= 14.17.0",
-    "npm": ">= 7.19.0"
+    "npm": ">= 7.19.0",
+    "yarn": ">= 1.22.10"
   },
   "bugs": {
     "url": "https://github.com/earnkeeper/ekp/issues"
