--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "namespace": "ekp"
   },
   "scripts": {
+    "heroku:deploy:farms": "git subtree push --prefix farms heroku master",
     "k:check-cert": "kubectl describe certificate ${npm_package_config_namespace}-public-tls -n $npm_package_config_namespace",
     "k:gen-secret-key": "werf helm secret generate-secret-key > .werf_secret_key",
     "k:encrypt-secrets": "werf helm secret values encrypt clear-values.yaml -o .helm/secret-values.yaml"
