--- a/package.json
+++ b/package.json
@@ -3,23 +3,107 @@
   "version": "0.1.0",
   "description": "Templates, examples and tools to develop plugins for earnkeeper.io",
   "private": true,
-  "config": {
-    "namespace": "ekp"
-  },
-  "scripts": {
-    "heroku:deploy:farms": "git subtree push --prefix farms heroku master",
-    "k:check-cert": "kubectl describe certificate ${npm_package_config_namespace}-public-tls -n $npm_package_config_namespace",
-    "k:gen-secret-key": "werf helm secret generate-secret-key > .werf_secret_key",
-    "k:encrypt-secrets": "werf helm secret values encrypt clear-values.yaml -o .helm/secret-values.yaml"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/earnkeeper/ekp.git"
   },
   "author": "Gavin Shaw",
   "license": "GPL-3.0-or-later",
+  "engines": {
+    "node": ">= 14.17.0",
+    "npm": ">= 7.19.0",
+    "yarn": ">= 1.22.10"
+  },
   "bugs": {
     "url": "https://github.com/earnkeeper/ekp/issues"
   },
-  "homepage": "https://github.com/earnkeeper/ekp#readme"
+  "homepage": "https://github.com/earnkeeper/ekp#readme",
+  "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "heroku:deploy:farms": "git subtree push --prefix farms heroku master",
+    "k:check-cert": "kubectl describe certificate ${npm_package_config_namespace}-public-tls -n $npm_package_config_namespace",
+    "k:gen-secret-key": "werf helm secret generate-secret-key > .werf_secret_key",
+    "k:encrypt-secrets": "werf helm secret values encrypt clear-values.yaml -o .helm/secret-values.yaml"
+  },
+  "dependencies": {
+    "@jsonforms/core": "^2.5.2",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/event-emitter": "^1.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.0",
+    "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.2.0",
+    "bottleneck": "^2.19.5",
+    "cache-manager": "^3.6.0",
+    "deep-equal": "^2.0.5",
+    "ethers": "^5.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "nestjs-redis": "^1.3.3",
+    "object-mapper": "^6.2.0",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.40",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/cache-manager": "^3.4.2",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.177",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "testEnvironment": "node",
+    "coverageDirectory": "./coverage",
+    "roots": [
+      "<rootDir>/libs/",
+      "<rootDir>/apps/"
+    ],
+    "moduleNameMapper": {
+      "^@app/sdk(|/.*)$": "<rootDir>/libs/sdk/src/$1",
+      "^@app/etherscan(|/.*)$": "<rootDir>/libs/etherscan/src/$1"
+    }
+  }
 }
