feat: add @cacheable and fix unit tests

--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./apps/my-project/test/jest-e2e.json",
     "heroku:deploy:farms": "git subtree push --prefix farms heroku master",
     "k:check-cert": "kubectl describe certificate ${npm_package_config_namespace}-public-tls -n $npm_package_config_namespace",
     "k:gen-secret-key": "werf helm secret generate-secret-key > .werf_secret_key",
