--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   "dependencies": {
     "@jsonforms/core": "^2.5.2",
     "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/event-emitter": "^1.0.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -50,6 +49,7 @@
     "bottleneck": "^2.19.5",
     "cache-manager": "^3.6.0",
     "deep-equal": "^2.0.5",
+    "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
