--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.2.0",
     "bottleneck": "^2.19.5",
+    "bycontract": "^2.0.11",
     "cache-manager": "^3.6.0",
     "deep-equal": "^2.0.5",
     "dotenv": "^10.0.0",
