--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ethers": "^5.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "moralis": "^0.0.135",
     "nestjs-redis": "^1.3.3",
     "object-mapper": "^6.2.0",
     "pg": "^8.7.1",
