--- a/.helm/templates/ingress.yaml
+++ b/.helm/templates/ingress.yaml
@@ -15,7 +15,7 @@ spec:
     - host: "{{ .Values.ingress.hostname }}"
       http:
         paths:
-          - path: /farms(/|$)(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
