--- a/.helm/templates/farms/ingress.farms.yaml
+++ b/.helm/templates/farms/ingress.farms.yaml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/issuer: "letsencrypt-prod"
-  name: ekp-public
+  name: farms-public
 spec:
   tls:
     - hosts:
-        - "{{ .Values.ingress.hostname }}"
+        - "farms.{{ .Values.ingress.hostname }}"
       secretName: ekp-public-tls
   rules:
-    - host: "{{ .Values.ingress.hostname }}"
+    - host: "farms.{{ .Values.ingress.hostname }}"
       http:
         paths:
           - path: /
