--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moralis": "^0.0.135",
+    "morphism": "^1.12.3",
     "nestjs-redis": "^1.3.3",
-    "object-mapper": "^6.2.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -109,7 +109,8 @@
     ],
     "moduleNameMapper": {
       "^@app/sdk(|/.*)$": "<rootDir>/libs/sdk/src/$1",
-      "^@app/etherscan(|/.*)$": "<rootDir>/libs/etherscan/src/$1"
+      "^@app/etherscan(|/.*)$": "<rootDir>/libs/etherscan/src/$1",
+      "^@app/mapper(|/.*)$": "<rootDir>/libs/mapper/src/$1"
     }
   }
 }
