--- a/.helm/templates/portfolio/ingress.portfolio.yaml
+++ b/.helm/templates/portfolio/ingress.portfolio.yaml
@@ -4,20 +4,20 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/issuer: "letsencrypt-prod"
-  name: farms-public
+  name: portfolio-public
 spec:
   tls:
     - hosts:
-        - "farms.{{ .Values.ingress.hostname }}"
+        - "portfolio.{{ .Values.ingress.hostname }}"
       secretName: ekp-public-tls
   rules:
-    - host: "farms.{{ .Values.ingress.hostname }}"
+    - host: "portfolio.{{ .Values.ingress.hostname }}"
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: farms
+                name: portfolio
                 port:
                   number: 3001
