--- a/.helm/templates/portfolio/service.portfolio.yaml
+++ b/.helm/templates/portfolio/service.portfolio.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: farms
+  name: portfolio
 spec:
   selector:
-    app: farms
+    app: portfolio
   ports:
   - name: http
     port: 3001
