--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@nestjs/platform-socket.io": "^8.2.0",
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.2.0",
+    "async-retry": "^1.3.3",
+    "axios": "^0.24.0",
     "bottleneck": "^2.19.5",
     "bycontract": "^2.0.11",
     "cache-manager": "^3.6.0",
@@ -67,6 +69,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/async-retry": "^1.4.3",
     "@types/cache-manager": "^3.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
