--- a/.helm/templates/portfolio/deployment.portfolio.yaml
+++ b/.helm/templates/portfolio/deployment.portfolio.yaml
@@ -24,6 +24,8 @@ spec:
               value: '{{ .Values.bscscan.apiKey }}'
             - name: MORALIS_APP_ID
               value: '{{ .Values.moralis.appId }}'
+            - name: MORALIS_API_KEY
+              value: '{{ .Values.moralis.apiKey }}'
             - name: MORALIS_SERVER_URL
               value: '{{ .Values.moralis.serverUrl }}'
           ports:
