--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "@nestjs/platform-socket.io": "^8.2.0",
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.2.0",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "async-retry": "^1.3.3",
     "axios": "^0.24.0",
     "bottleneck": "^2.19.5",
     "bycontract": "^2.0.11",
     "cache-manager": "^3.6.0",
+    "cache-manager-redis-store": "^2.0.0",
     "deep-equal": "^2.0.5",
     "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
