--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/event-emitter": "^1.0.0",
+    "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.2.0",
     "@nestjs/typeorm": "^8.0.2",
@@ -57,6 +58,7 @@
     "ethers": "^5.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "mongoose": "^6.1.2",
     "moralis": "^0.0.135",
     "morphism": "^1.12.3",
     "nestjs-redis": "^1.3.3",
