--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
   },
   "dependencies": {
     "@jsonforms/core": "^2.5.2",
+    "@nestjs/bull": "^0.4.2",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/event-emitter": "^1.0.0",
+    "@nestjs/microservices": "^8.2.4",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.2.0",
@@ -50,6 +52,7 @@
     "async-retry": "^1.3.3",
     "axios": "^0.24.0",
     "bottleneck": "^2.19.5",
+    "bull": "^3.29.3",
     "bycontract": "^2.0.11",
     "cache-manager": "^3.6.0",
     "cache-manager-redis-store": "^2.0.0",
@@ -74,6 +77,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/async-retry": "^1.4.3",
+    "@types/bull": "^3.15.7",
     "@types/cache-manager": "^3.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
