--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/event-emitter": "^1.0.0",
     "@nestjs/microservices": "^8.2.4",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
@@ -64,7 +65,7 @@
     "mongoose": "^6.1.2",
     "moralis": "^0.0.135",
     "morphism": "^1.12.3",
-    "nestjs-redis": "^1.3.3",
+    "nestjs-redis": "git+https://github.com/skunight/nestjs-redis.git",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
