--- a/.helm/templates/portfolio/deployment.portfolio.yaml
+++ b/.helm/templates/portfolio/deployment.portfolio.yaml
@@ -35,9 +35,9 @@ spec:
             - name: REDIS_HOST
               value: 'ekp-redis-master'
             - name: REDIS_USER
-              value: '{{ .Values.redis.user }}'
+              value: 'ekp'
             - name: REDIS_PASSWORD
-              value: '{{ .Values.redis.password }}'
+              value: 'password'
           ports:
             - containerPort: 3001
               protocol: TCP
