--- a/.helm/Chart.yaml
+++ b/.helm/Chart.yaml
@@ -4,6 +4,6 @@ dependencies:
     version: "10.30.8"
     repository: "https://charts.bitnami.com/bitnami"
 
-  - name: redis
-    version: "15.6.8"
-    repository: "https://charts.bitnami.com/bitnami"
+  # - name: redis
+  #   version: "15.6.8"
+  #   repository: "https://charts.bitnami.com/bitnami"
