--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
+    "threads": "^1.7.0",
+    "ts-node": "^10.0.0",
     "typeorm": "^0.2.40",
     "winston": "^3.3.3"
   },
