--- a/.helm/templates/portfolio/ingress.portfolio.yaml
+++ b/.helm/templates/portfolio/ingress.portfolio.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/affinity: "cookie"
     cert-manager.io/issuer: "letsencrypt-prod"
   name: portfolio-public
 spec:
