--- a/.helm/templates/portfolio/ingress.portfolio.yaml
+++ b/.helm/templates/portfolio/ingress.portfolio.yaml
@@ -4,6 +4,10 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/affinity: "cookie"
+    nginx.ingress.kubernetes.io/session-cookie-name: "route"
+    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
+    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
+    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
     cert-manager.io/issuer: "letsencrypt-prod"
   name: portfolio-public
 spec:
