--- a/Dockerfile.critterz
+++ b/Dockerfile.critterz
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY package.json /app 
 COPY yarn.lock /app
 
-RUN yarn install --immutable --immutable-cache --check-cache
+RUN yarn install
 
 COPY . /app 
 
