--- a/Dockerfile.portfolio
+++ b/Dockerfile.portfolio
@@ -3,9 +3,9 @@ FROM node:16.13.1
 WORKDIR /app 
 
 COPY package.json /app 
-COPY yarn.lock /app
+COPY package-lock.json /app
 
-RUN yarn install
+RUN npm ci
 
 COPY . /app 
 
