--- a/.helm/templates/critterz/ingress.critterz.yaml
+++ b/.helm/templates/critterz/ingress.critterz.yaml
@@ -9,7 +9,7 @@ metadata:
     nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
     nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
     cert-manager.io/issuer: "letsencrypt-prod"
-  name: portfolio-public
+  name: critterz-public
 spec:
   tls:
     - hosts:
