--- a/.helm/templates/critterz/deployment.critterz.yaml
+++ b/.helm/templates/critterz/deployment.critterz.yaml
@@ -32,6 +32,8 @@ spec:
               value: 'ekp-mongodb'
             - name: REDIS_HOST
               value: 'ekp-redis-master'
+            - name: OPENSEA_API_KEY
+              value: '{{ .Values.moralis.apiKey }}'
           ports:
             - containerPort: 3001
               protocol: TCP
